--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,14 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name=".DisplayAccActivity" />
-        android:parentActivityName=".MainActivity">
+            android:name=".DisplayAccActivity">
+            android:parentActivityName=".MainActivity">
 
-        <!-- The meta-data tag is required if you support API level 15 and lower -->
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".MainActivity" />
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".DisplayMessageActivity"
             android:parentActivityName=".MainActivity">
